--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -2130,11 +2130,30 @@ ASSISTANT:
             const startedList = startedArr.map(m => `• ${medLabel(m)}`).join('<br/>');
             const stoppedList = stoppedArr.map(m => `• ${medLabel(m)}`).join('<br/>');
 
+            // Surface high-risk medicines explicitly, aligned with Prompt Studio
+            // policy: "Always flag high-risk medicines (anticoagulants, insulin,
+            // opioids) for explicit counselling."
+            const highRiskTerms = ['insulin', 'warfarin', 'heparin', 'apixaban', 'rivaroxaban', 'anticoagulant', 'opioid', 'morphine', 'oxycodone', 'fentanyl'];
+            function isHighRiskName(name) {
+              if (!name) return false;
+              const lower = String(name).toLowerCase();
+              return highRiskTerms.some(t => lower.includes(t));
+            }
+            const allMeds = [...contArr, ...startedArr, ...stoppedArr];
+            const highRiskMeds = allMeds.filter(m => isHighRiskName(m.medication_name || m.name));
+            const highRiskLines = highRiskMeds.map(m => `• ${medLabel(m)}`).join('<br/>');
+            const eduPoints = Array.isArray(recon.education_points) ? recon.education_points : [];
+            const eduHtml = eduPoints.length
+              ? `<p><strong>Education and counselling points:</strong><br/>${eduPoints.map(e => `• ${e}`).join('<br/>')}</p>`
+              : '';
+
             intro = `The Medication Reconciliation agent has compared home, in-hospital, and proposed discharge medicines for <code>${pid}</code>. ` +
                     `It will continue <strong>${cont}</strong> medicine(s), start <strong>${started}</strong>, and stop <strong>${stopped}</strong>, highlighting important education points for the patient.` +
                     (contList ? `<p><strong>Continued medicines:</strong><br/>${contList}</p>` : '') +
                     (startedList ? `<p><strong>New medicines to start:</strong><br/>${startedList}</p>` : '') +
-                    (stoppedList ? `<p><strong>Medicines to stop:</strong><br/>${stoppedList}</p>` : '');
+                    (stoppedList ? `<p><strong>Medicines to stop:</strong><br/>${stoppedList}</p>` : '') +
+                    (highRiskLines ? `<p><strong>High-risk medicines flagged for explicit counselling (per policy):</strong><br/>${highRiskLines}</p>` : '') +
+                    eduHtml;
           } else if (kind === 'hd_step3') {
             const fups = Array.isArray(res.required_followups) ? res.required_followups : [];
             let missing = fups.filter(f => f.status === 'MISSING').length;
@@ -2216,15 +2235,23 @@ ASSISTANT:
                     safetyLine;
           } else if (kind === 'hd_step4') {
             const gp = res.gp_handoff || {};
-            const bullets = Array.isArray(gp.summary_bullets) ? gp.summary_bullets.length : 0;
+            const summaryArr = Array.isArray(gp.summary_bullets) ? gp.summary_bullets : [];
+            const bullets = summaryArr.length;
             const actionsArr = Array.isArray(gp.gp_action_items) ? gp.gp_action_items : [];
             const referralsArr = Array.isArray(gp.community_referrals) ? gp.community_referrals : [];
 
             function gpActionLabel(a) {
               const desc = a.description || a.summary || 'GP follow-up';
               let prov = a.provider || a.gp || '';
-              if (prov && typeof prov === 'object') {
-                prov = prov.name || prov.id || JSON.stringify(prov);
+              if (Array.isArray(prov)) {
+                // Sometimes provider comes through as an array of rich-text spans,
+                // e.g. [{ text: "Case Manager Kim" }]. Render this cleanly.
+                prov = prov
+                  .map(p => (p && (p.text || p.name || p.id || '')).trim())
+                  .filter(Boolean)
+                  .join(', ');
+              } else if (prov && typeof prov === 'object') {
+                prov = prov.name || prov.text || prov.id || '';
               }
               const when = a.when || a.timeframe || a.due || '';
               const bits = [desc];
@@ -2233,6 +2260,7 @@ ASSISTANT:
               return bits.join(' · ');
             }
 
+            const summaryLines = summaryArr.map(b => `• ${b}`).join('<br/>');
             const gpLines = actionsArr.map(a => `• ${gpActionLabel(a)}`).join('<br/>');
             const refLines = referralsArr.map(r => {
               const type = r.type || r.service || 'Referral';
@@ -2247,6 +2275,7 @@ ASSISTANT:
             const actions = actionsArr.length;
             intro = `The GP & Community Handoff agent has generated a structured handover for patient <code>${pid}</code>. ` +
                     `It includes <strong>${bullets}</strong> key summary point(s) and <strong>${actions}</strong> GP action item(s), plus any required community referrals.` +
+                    (summaryLines ? `<p><strong>Key summary points for GP:</strong><br/>${summaryLines}</p>` : '') +
                     (gpLines ? `<p><strong>GP follow-up actions:</strong><br/>${gpLines}</p>` : '') +
                     (refLines ? `<p><strong>Community referrals:</strong><br/>${refLines}</p>` : '');
           } else if (kind === 'hd_step5') {
